--- a/viner/produkter/oddbird.html
+++ b/viner/produkter/oddbird.html
@@ -58,8 +58,9 @@
             <li>
               <a class="active link" href="../../viner">Viner</a>
             </li>
-            <li>
+            <li class="basket-container">
               <a class="link" href="../../varukorg">Varukorg</a>
+              <div id="basket"></div>
             </li>
             <li>
               <!-- Is shown only at max-width: 640px -->
@@ -226,6 +227,8 @@
           <form class="add-to-cart">
             <div class="input-box">
               <input
+                id="numOfItems"
+                name="numOfItems"
                 aria-label="antal varor"
                 type="number"
                 value="1"
@@ -234,7 +237,11 @@
                 required
               />
             </div>
-            <button type="submit">Lägg i varukorg</button>
+            <button
+              onclick="addToBasket(this, '005', 'Oddbird Presence - Non Alcoholic', document.getElementById('numOfItems').value ,1100, 'oddbird', true)"
+            >
+              Lägg i varukorg
+            </button>
           </form>
         </section>
       </div>
@@ -310,5 +317,6 @@
     <script src="../../js/header.js"></script>
     <script src="../../js/form.js"></script>
     <script src="../../js/gallery.js"></script>
+    <script src="../../js/webshop.js"></script>
   </body>
 </html>
