Added the basket funtionality to additional pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
               <a class="link" href="om-vinbolaget">Om Vinbolaget</a>
             </li>
             <li><a class="link" href="viner">Viner</a></li>
-            <li><a class="link" href="varukorg">Varukorg</a></li>
+            <li class="basket-container">
+              <a class="link" href="varukorg">Varukorg</a>
+              <div id="basket"></div>
+            </li>
             <li>
               <!-- Is shown only at max-width: 640px -->
               <form class="inside-nav" action="viner/" autocomplete="off">
