--- a/om-vinbolaget/index.html
+++ b/om-vinbolaget/index.html
@@ -57,7 +57,10 @@
             </li>
             <li><a class="link" href="../viner">Viner</a></li>
             <li>
-              <a class="link" href="../varukorg">Varukorg</a>
+              <li class="basket-container">
+                <a class="link" href="../varukorg">Varukorg</a>
+                <div id="basket"></div>
+              </li>
             </li>
             <li>
               <!-- Is shown only at max-width: 640px -->
@@ -272,5 +275,6 @@
       </div>
     </footer>
     <script src="../js/header.js"></script>
+    <script src="js/webshop.js"></script>
   </body>
 </html>
