--- a/viner/index.html
+++ b/viner/index.html
@@ -57,10 +57,9 @@
             </li>
             <li><a class="active link" href="../viner">Viner</a></li>
             <li class="basket-container">
-              <a class="link" href="../../varukorg">Varukorg</a>
+              <a class="link" href="../varukorg">Varukorg</a>
               <div id="basket"></div>
             </li>
-
             <li>
               <!-- Is shown only at max-width: 640px -->
               <form class="inside-nav" action="../viner/" autocomplete="off">
