--- a/index.html
+++ b/index.html
@@ -515,5 +515,6 @@
       </div>
     </footer>
     <script src="js/header.js"></script>
+    <script src="js/webshop.js"></script>
   </body>
 </html>
