Fixed a bug where the page om vinbolaget was not showing the nav link varukorg properly

--- a/om-vinbolaget/index.html
+++ b/om-vinbolaget/index.html
@@ -56,11 +56,9 @@
               <a class="active link" href="../om-vinbolaget">Om Vinbolaget</a>
             </li>
             <li><a class="link" href="../viner">Viner</a></li>
-            <li>
-              <li class="basket-container">
-                <a class="link" href="../varukorg">Varukorg</a>
-                <div id="basket"></div>
-              </li>
+            <li class="basket-container">
+              <a class="link" href="../varukorg">Varukorg</a>
+              <div id="basket"></div>
             </li>
             <li>
               <!-- Is shown only at max-width: 640px -->
@@ -275,6 +273,6 @@
       </div>
     </footer>
     <script src="../js/header.js"></script>
-    <script src="js/webshop.js"></script>
+    <script src="../js/webshop.js"></script>
   </body>
 </html>
