--- a/varukorg/index.html
+++ b/varukorg/index.html
@@ -57,7 +57,7 @@
             </li>
             <li><a class="link" href="../viner">Viner</a></li>
             <li class="basket-container">
-              <a class="link" href="../../varukorg">Varukorg</a>
+              <a class="link" href="../varukorg">Varukorg</a>
               <div id="basket"></div>
             </li>
             <li>
